# udemy-autocoupons

./: .black.toml  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .style.yapf  .yamllint.yaml  LICENSE  README.md  cspell.config.yaml  dev-requirements.txt  flake8-plugin-requirements.txt  pyrightconfig.json  requirements.txt  setup.cfg
.github/: pre-commit-ci-config.yaml
.github/workflows/: lint.yaml
docs/: CONTRIBUTING.md
typings/undetected_chromedriver/: __init__.pyi  _compat.pyi  cdp.pyi  devtool.pyi  options.pyi  patcher.pyi  webelement.pyi
udemy_autocoupons/: __init__.py  __main__.py  constants.py  courses_store.py  follow_redirects.py  loggers.py  parse_arguments.py  persistent_data.py  queue_manager.py  request_with_reattempts.py  run_driver.py  thread_safe_list.py  udemy_course.py  udemy_driver.py
udemy_autocoupons/enroller/: __init__.py  enroller.py  state.py  udemy_driver.py
udemy_autocoupons/scrapers/: __init__.py  freebiesglobal_scraper.py  freshcoupons_scraper.py  scraper.py  telegram_scraper.py  tutorialbar_scraper.py  wordpress_scraper.py
udemy_autocoupons/scrapers/channel_scrapers/: __init__.py  channel_scraper.py  generic_process_message.py  generic_scrapers.py
udemy_autocoupons/scrapers/web_scrappers/: __init__.py  freebiesglobal_scraper.py  tutorialbar_scraper.py  wordpress_scraper.py
udemy_autocoupons/setup/: __init__.py  setup_telegram.py
